--- a/index.html
+++ b/index.html
@@ -507,8 +507,8 @@
 								<h2 class="h2-xs">Mức giá hợp lý</h2>	
 
 								<!-- Text -->
-								<p>Aliquam a augue suscipit, luctus neque purus ipsum neque dolor primis libero tempus, 
-								   tempor posuere ligula varius impedit enim tempor sapien
+								<p>Chúng tôi cung cấp đến người dùng các gói dịch vụ với mức giá hợp lý,
+                   phù hợp với nhiều nhu cầu sử dụng
 								</p>
 										
 							</div> 	
@@ -533,7 +533,7 @@
 									<!-- Pricing Plan Features  -->
 									<ul class="features">
 										<li>Tối đa <strong>25</strong> users</li>
-										<li><strong>5 GB</strong> of Storage</li>
+										<!-- <li><strong>5 GB</strong> of Storage</li> -->
 										<li>Hỗ trợ <strong>Tiếng Việt</strong></li>
 										<li><strong>24/7</strong> Support</li>									
 									</ul>
@@ -556,7 +556,7 @@
 									<!-- Pricing Plan Features  -->
 									<ul class="features">
 										<li>Tối đa <strong>50</strong> users</li>
-										<li><strong>50 GB</strong> of Storage</li>
+										<!-- <li><strong>50 GB</strong> of Storage</li> -->
 										<li>Hỗ trợ <strong>Tiếng Việt</strong></li>
 										<li><strong>24/7</strong> Support</li>									
 									</ul>
@@ -580,7 +580,7 @@
 									<!-- Pricing Plan Features  -->
 									<ul class="features">
 										<li>Tối đa <strong>100</strong> users</li>
-										<li><strong>100 GB</strong> of Storage</li>
+										<!-- <li><strong>100 GB</strong> of Storage</li> -->
 										<li>Hỗ trợ <strong>Tiếng Việt</strong></li>
 										<li><strong>24/7</strong> Support</li>									
 									</ul>
@@ -603,7 +603,7 @@
 									<!-- Pricing Plan Features  -->
 									<ul class="features">
 										<li>Hơn <strong>100</strong> users</li>
-										<li><strong>100 GB</strong> of Storage</li>
+										<!-- <li><strong>100 GB</strong> of Storage</li> -->
 										<li>Hỗ trợ <strong>Tiếng Việt</strong></li>
 										<li><strong>24/7</strong> Support</li>									
 									</ul>
