--- a/index.html
+++ b/index.html
@@ -573,10 +573,10 @@
 
 					<!-- PORTFOLIO IMAGES HOLDER -->	
 					<div class="row">	
-            <div class="col-md-6 animated" data-animation="fadeInRight" data-animation-delay="400">
+            <div class="col-md-6 col-xs-10 mb-5 animated text-center" data-animation="fadeInRight" data-animation-delay="400">
               <img src="/images/example_1.png" width=90%>
             </div>
-            <div class="col-md-6 animated" data-animation="fadeInLeft" data-animation-delay="400">
+            <div class="col-md-6 col-xs-10 mb-5 animated text-center data-animation="fadeInLeft" data-animation-delay="400">
               <img src="/images/example_2.png" width=90%>
             </div>						
 					</div>		<!-- END PORTFOLIO IMAGES HOLDER -->
@@ -701,29 +701,29 @@
               <h2 class="h2-xs">Các câu hỏi thường gặp</h2>	
               <p>Cung cấp các hỏi đáp thường gặp đối với dịch vụ NhanHoaMeet. Hãy liên hệ với chúng tôi nếu bạn có bất kỳ câu hỏi nào khác.</p>
               <div class="text-left mt-5 animated" data-animation="fadeInUp" data-animation-delay="500">
-                <h5 class="ml-5"><i class="fas fa-chevron-right mr-2"></i>Các hình thức thanh toán khi sử dụng dịch vụ MONITOR365 là gì?</h5>
+                <h5 class="ml-4"><i class="fas fa-chevron-right mr-2"></i>Các hình thức thanh toán khi sử dụng dịch vụ MONITOR365 là gì?</h5>
                 <p>MONITOR365 hỗ trợ nhiều hình thức thanh toán để đáp ứng được nhu cầu của nhiều người dùng nhất, 
                   đặc biệt người dùng tại Việt Nam. Chúng tôi hỗ trợ thanh toán online qua các cổng thanh toán NAPAS,
                   chuyển khoản và thanh toán tại văn phòng.</p>
               </div>
               <div class="text-left mt-4 animated" data-animation="fadeInUp" data-animation-delay="500">
-                <h5 class="ml-5"><i class="fas fa-chevron-right mr-2"></i>Hạ tầng của CLOUD365 được đặt ở đâu?</h5>
+                <h5 class="ml-4"><i class="fas fa-chevron-right mr-2"></i>Hạ tầng của CLOUD365 được đặt ở đâu?</h5>
                 <p>Hạ tầng của CLOUD365 được đặt tại các Datacenter theo tiêu chuẩn tier 3 với các hệ thống điện dự phòng, 
                   điều hòa làm mát và ổn định về đường truyền. Các Datacenter mà CLOUD365 đặt máy chủ là VNPT, Viettel, FPT.</p>
               </div>
               <div class="text-left mt-4 animated" data-animation="fadeInUp" data-animation-delay="500">
-                <h5 class="ml-5"><i class="fas fa-chevron-right mr-2"></i>Người dùng MONITOR365 được hỗ trợ gì khi sử dụng dịch vụ?</h5>
+                <h5 class="ml-4"><i class="fas fa-chevron-right mr-2"></i>Người dùng MONITOR365 được hỗ trợ gì khi sử dụng dịch vụ?</h5>
                 <p>CLOUD365 tập trung vào chất lượng để phục vụ khách hàng và cam kết hỗ trợ khách hàng trọn đời trong quá trình 
                   sử dụng sản phẩm của chúng tôi. Ngoài ra nhân viên tư vấn và nhân viên hỗ trợ khách hàng qua nhiều hình thức như: 
                   Điện thoại, chat, email, ticket .</p>
               </div>
               <div class="text-left mt-4 animated" data-animation="fadeInUp" data-animation-delay="500">
-                <h5 class="ml-5"><i class="fas fa-chevron-right mr-2"></i>Tôi không muốn dùng portal của CLOUD365 thì sử dụng dịch vụ như thế nào?</h5>
+                <h5 class="ml-4"><i class="fas fa-chevron-right mr-2"></i>Tôi không muốn dùng portal của CLOUD365 thì sử dụng dịch vụ như thế nào?</h5>
                 <p>Nếu vì lý do nào đó mà bạn không thể sử dụng portal của CLOUD365 để thao tác và vận hành dịch vụ,
                   hãy liên hệ với bộ phận hỗ trợ để được hỗ trợ. Chúng tôi phục vụ khách hàng 24/7 kể cả ngày lễ.</p>
               </div>
               <div class="text-left mt-4 animated" data-animation="fadeInUp" data-animation-delay="500">
-                <h5 class="ml-5"><i class="fas fa-chevron-right mr-2"></i>CLOUD365 còn cung cấp các dịch vụ khác hay không?</h5>
+                <h5 class="ml-4"><i class="fas fa-chevron-right mr-2"></i>CLOUD365 còn cung cấp các dịch vụ khác hay không?</h5>
                 <p>Chúng tôi cung cấp sản phẩm tới người dùng cuối theo như trang chủ, ngoài ra chúng tôi còn cung cấp
                   thêm các dịch vụ tư vấn giải pháp, triển khai các sản phẩm theo hình thức cloud như: Storage, Logging, Loadbalancer ...</p>
               </div>
