--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
 						<!-- LOGO IMAGE -->
 						<!-- For Retina Ready displays take a image with double the amount of pixels that your image will be displayed (e.g 304 x 72 pixels) -->
-				 		<a href="#hero-13" class="navbar-brand logo-white"><img src="images/logo_white.png" width="250" height="42" alt="header-logo"></a>
-				 		<a href="#hero-13" class="navbar-brand logo-black"><img src="images/logo_dark.png" width="250" height="42" alt="header-logo"></a>
+				 		<a href="#hero-13" class="navbar-brand logo-white"><img src="images/logo-white.png" width="170" height="42" alt="header-logo"></a>
+				 		<a href="#hero-13" class="navbar-brand logo-black"><img src="images/logo-dark.png" width="170" height="42" alt="header-logo"></a>
 				 		<!-- Responsive Menu Button -->
 				 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				   		<span class="navbar-toggler-icon"></span>
@@ -644,8 +644,8 @@
 										<img src="images/client_1.jpg" alt="testimonial-avatar">
 										<!-- Testimonial Author -->
 										<div class="review-author">
-											<p class="testimonial-autor">Mr. Tô Thành Công</p>	
-											<span class="rose-color">Programmer</span>									
+											<p class="testimonial-autor">Tô Thành Công</p>	
+											<span class="blue-color">CTO NhanHoa Softwares Company</span>									
 										</div>																								
 									</li>
 									<!-- TESTIMONIAL #2 -->
@@ -658,11 +658,11 @@
 											</p>
 										</div>	
 										<!-- Testimonial Author Avatar -->
-										<img src="images/client_1.jpg" alt="testimonial-avatar">
+										<img src="images/client_2.jpg" alt="testimonial-avatar">
 										<!-- Testimonial Author -->
 										<div class="review-author">
-											<p class="testimonial-autor">Mr. Tô Thành Công</p>
-											<span class="rose-color">Housewife</span>										
+											<p class="testimonial-autor">Nguyễn Bá Thành</p>
+											<span class="blue-color">TLU University</span>										
 										</div>																					
 									</li>
 									<!-- TESTIMONIAL #3 -->
@@ -675,11 +675,11 @@
 											</p>
 										</div>
 										<!-- Testimonial Author Avatar -->
-										<img src="images/client_1.jpg" alt="testimonial-avatar">
+										<img src="images/client_3.jpg" alt="testimonial-avatar">
 										<!-- Testimonial Author -->
 										<div class="review-author">
-											<p class="testimonial-autor">Mr. Tô Thành Công</p>
-											<span class="rose-color">SEO Manager</span>				
+											<p class="testimonial-autor">Nguyễn Văn Thao</p>
+											<span class="blue-color">HANU University</span>				
 										</div>													
 									</li>
 									<!-- TESTIMONIAL #4 -->
@@ -692,11 +692,11 @@
 											</p>
 										</div>
 										<!-- Testimonial Author Avatar -->
-										<img src="images/client_1.jpg" alt="testimonial-avatar">
+										<img src="images/client_4.jpg" alt="testimonial-avatar">
 										<!-- Testimonial Author -->
 										<div class="review-author">
-											<p class="testimonial-autor">Mr. Tô Thành Công</p>
-											<span class="rose-color">Internet Surfer</span>										
+											<p class="testimonial-autor">Đinh Văn Mạnh</p>
+											<span class="blue-color">NhanHoa Softwares Company</span>										
 										</div>																											
 									</li>
 									<!-- TESTIMONIAL #5 -->
@@ -709,11 +709,11 @@
 											</p>
 										</div>	
 										<!-- Testimonial Author Avatar -->
-										<img src="images/client_1.jpg" alt="testimonial-avatar">
+										<img src="images/client_5.jpg" alt="testimonial-avatar">
 										<!-- Testimonial Author -->
 										<div class="review-author">
-											<p class="testimonial-autor">Mr. Tô Thành Công</p>	
-											<span class="rose-color">Graphic Designer</span>									
+											<p class="testimonial-autor">Đặng Đình Công</p>	
+											<span class="blue-color">Giảng viên BKACAD</span>									
 										</div>																										
 									</li>
 								</ul>
